
> [FILE:svcop_simulation.py] Updated count score in svcop_simulation.py
    TOTAL_POINTS = (TOTAL_POINTS + 2 * CORRECT_TRUES) -> 2
    TOTAL_POINTS = (TOTAL_POINTS - 8 * FALSE_POSITIVES) -> -62
    TOTAL_POINTS = (TOTAL_POINTS - 4 * FALSE_NEGATIVES)


> [THE PROJECT] Fixing bugs
    :: [SOLVED] in delete_unsafe.c -> Handle NULL in the lib
    :: [FUTURE] in cstrcat_unsafe.c - STOPPED for while
        - cuz in the function IS_VALID_POINTER_FORTES we do not check if the block is a valid addr
    :: [TODO] in the lib to get data value from print_by_type, this cuz the time when is call - checkout write_logfile_maplist
    :: Provide support to alloca function





> [THE PROJECT] Updating readme file
> [THE PROJECT] Thinking how avoid the tool execution if we have necessary packages not installed


> [THE PROJECT] Dealing with alloc C function. The actual project status generates false positives cuz the alloc function
    :: HIP1: Adding a filed in mapping to identify what is the allocation function adopted, this way we can write a correct
            leak asssertion to.

> [THE PROJECT] Creating an analysis to improve the use of __VERIFIER_nondet_int(). E.g., in cstrncat_alloc.c
    is adopted to determine the size of array
    ::HIP1: Creating a static analysis to determine what kid of __VERIFIER_nondet_int() should be, such as:
            (1) 0 or 1 to whiles and fors, or
            (2) the array size os vars







> [THE PROJECT] TODO: install test in diferent PCs
> [THE PROJECT] Checking ESBMC cuz this apt-get install libc6-dev-i386

> [FILE:create_map.py] Otimizing the time execution of args parse. The average time is 0.5s (this maybe is high)

> [FILE:create_map.py] TODO: Analyzing print in the trace log about arrays
        :: Data: in this Decl int z[4]={2,6,1,9}; is presented in the trace z = 2; :(
            ::HIP1: Try ignore the Decl put --, and for assignments consider map this a[i]